--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pytz==2018.9
 requests==2.21.0
 retrying==1.3.3
 six==1.12.0
+statsmodels==0.8.0
 traitlets==4.3.2
 urllib3==1.24.1
 Werkzeug==0.14.1
